Add styles for image selector component

--- a/src/components/ImageSelector/ImageSelector.module.css
+++ b/src/components/ImageSelector/ImageSelector.module.css
@@ -1,6 +1,24 @@
+@import '../../variables.css';
+
+.dropzone {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
 .preview {
   width: 48px;
   height: 48px;
   object-fit: cover;
   margin-right: 16px;
+}
+
+.iconWrapper {
+  margin-right: 16px;
+  height: 48px;
+  width: 48px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
