Set hover colour for buttons

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -10,8 +10,10 @@
 
 .button:hover {
   background-color: var(--primary-hover);
+  color: #000000;
 }
 
 .button:active {
   background-color: var(--primary-active);
+  color: #000000;
 }
