--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -21,7 +21,6 @@
 }
 
 .homeLink {
-  color: unset;
   text-decoration: none;
 }
 
@@ -59,4 +58,8 @@
 
 .link {
   text-decoration: none;
+}
+
+.link:hover {
+  color: #000000;
 }
