--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -1,6 +1,12 @@
 @import '../../variables.css';
 
 .button {
+  appearance: none;
+  -webkit-appearance: none;
+  border: none;
+  font-size: unset;
+  margin: 0;
+
   background-color: var(--primary);
   cursor: pointer;
   color: #000000;
@@ -16,4 +22,21 @@
 .button:active {
   background-color: var(--primary-active);
   color: #000000;
+}
+
+.contentWithIcon {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+}
+
+.iconWrapper {
+  margin-right: 16px;
+  height: 48px;
+  width: 48px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
