--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -7,6 +7,7 @@
 }
 
 .navbarContent {
+  padding: 0 16px;
   max-width: 900px;
   margin: 0 auto;
   display: flex;
@@ -22,6 +23,9 @@
 
 .homeLink {
   text-decoration: none;
+  font-family: 'Fredoka One', -apple-system, BlinkMacSystemFont, 'Segoe UI',
+    'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
+    'Helvetica Neue', sans-serif;
 }
 
 .siteName {
