--- a/src/pages/GeneratorPage/GeneratorPage.module.css
+++ b/src/pages/GeneratorPage/GeneratorPage.module.css
@@ -77,7 +77,9 @@
     flex-direction: column;
     align-items: stretch;
   }
+}
 
+@media screen and (max-width: 500px) {
   .fileInputs {
     flex-direction: column;
     align-items: unset;
