--- a/src/components/TextField/TextField.module.css
+++ b/src/components/TextField/TextField.module.css
@@ -4,7 +4,7 @@
   line-height: 1.5;
   font-size: 0.8em;
 
-  background-color: var(--primary-translucent);
+  background-color: var(--primary-muted);
   border: none;
   border-radius: 4px;
   color: #ffffff;
