--- a/src/variables.css
+++ b/src/variables.css
@@ -3,5 +3,5 @@
   --primary-hover: rgb(194, 169, 255);
   --primary-active: rgb(172, 139, 255);
 
-  --primary-translucent: rgba(183, 154, 255, 0.33);
+  --primary-muted: rgb(71, 60, 97);
 }
