--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -56,12 +56,17 @@
 }
 
 .linkList {
+  list-style-type: none;
   display: flex;
   flex-direction: row;
   align-items: stretch;
   justify-content: flex-end;
   margin-bottom: 8px;
   flex-wrap: wrap;
+}
+
+.linkWrapper:not(:last-child) {
+  margin-right: 8px;
 }
 
 .link {
@@ -72,10 +77,6 @@
 
 .link:hover {
   color: #000000;
-}
-
-.link:not(:last-child) {
-  margin-right: 8px;
 }
 
 @media screen and (max-width: 500px) {
