--- a/src/components/Navbar/Navbar.module.css
+++ b/src/components/Navbar/Navbar.module.css
@@ -22,7 +22,9 @@
 }
 
 .homeLink {
-  display: block;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
   text-decoration: none;
   font-family: 'Fredoka One', -apple-system, BlinkMacSystemFont, 'Segoe UI',
     'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans',
@@ -32,6 +34,7 @@
 .siteName {
   padding: 0;
   margin: 0;
+  margin-left: 12px;
 }
 
 .dropdown {
