--- a/src/components/Configurator/Configurator.module.css
+++ b/src/components/Configurator/Configurator.module.css
@@ -8,19 +8,20 @@
 
 .generatorName {
   display: block;
-  font-size: 1.25rem;
-  margin-bottom: 24px;
+  margin-top: 0;
+  margin-bottom: 16px;
+  font-size: 1.5em;
 }
 
 .helpText {
   margin: 0;
-  margin-bottom: 24px;
 }
 
 .heading {
   display: block;
   font-size: 1.1rem;
-  margin-bottom: 24px;
+  margin-top: 24px;
+  margin-bottom: 16px;
 }
 
 .settingName {
@@ -30,4 +31,14 @@
 
 .settingName:not(:first-of-type) {
   margin-top: 16px;
+}
+
+.settingWrapper {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 16px;
+}
+
+.settingWrapper:last-child {
+  margin-bottom: 0;
 }
