--- a/components/Configurator/Configurator.module.css
+++ b/components/Configurator/Configurator.module.css
@@ -20,12 +20,19 @@
 .heading {
   display: block;
   font-size: 1.1rem;
-  margin-top: 24px;
-  margin-bottom: 16px;
+  margin-right: 16px;
+}
+
+.headingWrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+  margin-top: 16px;
 }
 
 .shareSection {
-  margin: 16px 0;
+  margin-top: 16px;
   display: flex;
   flex-direction: column;
   align-items: stretch;
