--- a/components/TextField/TextField.module.css
+++ b/components/TextField/TextField.module.css
@@ -2,10 +2,16 @@
   line-height: 1.5;
   font-size: 0.8em;
 
-  background-color: var(--primary-muted);
-  border: none;
+  background: none;
+  border: 1px solid var(--primary);
   border-radius: 4px;
   color: #ffffff;
   padding: 8px;
   margin: 0;
+}
+
+.textField:disabled {
+  border: 1px solid var(--primary-muted);
+  background: var(--primary-muted);
+  cursor: not-allowed;
 }
