Add alt text explanation below suggested alt text

--- a/components/GeneratorPage/GeneratorPage.module.css
+++ b/components/GeneratorPage/GeneratorPage.module.css
@@ -89,6 +89,10 @@
   margin: 0;
 }
 
+.altTextExpander {
+  margin-top: 16px;
+}
+
 @media screen and (max-width: 500px) {
   .generatorWrapper {
     flex-direction: column;
