Improve handling of image descriptions
Remove the need for generators to always replace and empty description with `{{userImage}}`

--- a/components/ImageField/ImageField.module.css
+++ b/components/ImageField/ImageField.module.css
@@ -44,12 +44,17 @@
   padding-top: 12px;
 }
 
-.altTextWrapper {
+.descriptionWrapper {
   display: flex;
   flex-direction: column;
   gap: 4px;
 }
 
-.altTextField {
+.descriptionField {
   width: 100%;
+}
+
+.descriptionHelp {
+  margin: 0;
+  font-size: 0.85rem;
 }
