Debounce setting changes
Only regenerate the output when the user pauses while editing settings, to prevent performance issues

Closes #34

--- a/components/GeneratorPage/GeneratorPage.module.css
+++ b/components/GeneratorPage/GeneratorPage.module.css
@@ -17,6 +17,15 @@
   height: auto;
 }
 
+.dimmer {
+  flex: 1;
+  width: 100%;
+}
+
+.dimmed {
+  opacity: 0.5;
+}
+
 .placeholder {
   flex: 1;
   width: 100%;
