--- a/styles/fonts.css
+++ b/styles/fonts.css
@@ -79,3 +79,10 @@
   src: local(''), url('/fonts/Komika.woff2') format('woff2'),
     url('/fonts/Komika.woff') format('woff');
 }
+
+@font-face {
+  font-family: 'Momo';
+  font-style: normal;
+  font-weight: 400;
+  src: local(''), url('/fonts/Momo.woff2') format('woff2');
+}
