--- a/components/GeneratorPage/GeneratorPage.module.css
+++ b/components/GeneratorPage/GeneratorPage.module.css
@@ -21,6 +21,26 @@
   opacity: 0.5;
 }
 
+.error {
+  flex: 1;
+  width: 100%;
+  background-color: #e7504b;
+  border-radius: 8px;
+  padding: 16px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.errorTitle {
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+.errorStackTrace {
+  font-family: monospace;
+}
+
 .placeholder {
   flex: 1;
   width: 100%;
